test/integration/bad/functions-bad9.stan
functions {
  void bar(int x);
  void bar(int x, real y);
}
